--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/guidepedia_db
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:postgresql://c-c9qm2nth8tnmahrjklqv.rw.mdb.yandexcloud.net:6432/guidepedia_db
+spring.datasource.username=karavaevakate
 spring.datasource.password=guidepedia
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
